--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body>
-    <a href="tetris.html" class="button">Play Tetrisr</a>
+    <a href="tetris.html" class="button">Play Tetris</a>
   </body>
 </html>
  
