--- a/pacman.html
+++ b/pacman.html
@@ -1105,6 +1105,16 @@ var PACMAN = (function () {
 
         var extension = Modernizr.audio.ogg ? 'ogg' : 'mp3';
 
+        var audio_files = [
+            ["start", root + "audio/opening_song." + extension],
+            ["die", root + "audio/die." + extension],
+            ["eatghost", root + "audio/eatghost." + extension],
+            ["eatpill", root + "audio/eatpill." + extension],
+            ["eating", root + "audio/eating.short." + extension],
+            ["eating2", root + "audio/eating.short." + extension]
+        ];
+
+        load(audio_files, function() { loaded(); });
     };
 
     function load(arr, callback) { 
@@ -1322,3 +1332,4 @@ $(function(){
 	</script>
 </body>
 </html>
+
