--- a/index.html
+++ b/index.html
@@ -54,3 +54,51 @@
 </html>
  
  
+<html>
+<center>
+  <head>
+    <title>Mainpage</title>
+    <style>
+      .button {
+        background-color:#990000;
+        border: none;
+        color: white;
+        padding: 20px 34px;
+        text-align: center;
+        text-decoration: underline;
+        display: inline-block;
+        font-size: 50px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  <body>
+    <a href="snake.html" class="button">Play Snake</a>
+  </body>
+</html>
+
+
+<html>
+<center>
+  <head>
+    <title>Mainpage</title>
+    <style>
+      .button {
+        background-color:#990000;
+        border: none;
+        color: white;
+        padding: 20px 34px;
+        text-align: center;
+        text-decoration: underline;
+        display: inline-block;
+        font-size: 50px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  <body>
+    <a href="breakout.html" class="button">Play Breakout</a>
+  </body>
+</html>
