--- a/pacman.html
+++ b/pacman.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<html>
+  <head>
+    <title>Mainpage</title>
+    <style>
+      .button {
+        background-color:#800000;
+        border: none;
+        color: white;
+        padding: 20px 34px;
+        text-align: center;
+        text-decoration: underline;
+        display: inline-block;
+        font-size: 20px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+    <a href="index.html" class="button">Go Home</a>
+</html>
+
 	<title>Pacman</title>
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Permanent+Marker">
 	<style type="text/css">
