--- a/breakout.html
+++ b/breakout.html
@@ -1,5 +1,27 @@
 <html>
 <head>
+
+<html>
+  <head>
+    <title>Mainpage</title>
+    <style>
+      .button {
+        background-color:#800000;
+        border: none;
+        color: white;
+        padding: 20px 34px;
+        text-align: center;
+        text-decoration: underline;
+        display: inline-block;
+        font-size: 20px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+    <a href="index.html" class="button">Go Home</a>
+</html>
+
     <meta charset="utf-8" />
     <title>Breakout</title>
     <style>* { padding: 0; margin: 0; } canvas { background: #eee; display: block; margin: 0 auto; }</style>
