--- a/tetris.html
+++ b/tetris.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Basic Tetris HTML Game</title>
+
+<html>
+  <head>
+    <title>Mainpage</title>
+    <style>
+      .button {
+        background-color:#800000;
+        border: none;
+        color: white;
+        padding: 20px 34px;
+        text-align: center;
+        text-decoration: underline;
+        display: inline-block;
+        font-size: 20px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+    <a href="index.html" class="button">Go Home</a>
+</html>
+
   <meta charset="UTF-8">
   <style>
   html, body {
