--- a/index.html
+++ b/index.html
@@ -123,6 +123,6 @@
     </style>
   </head>
   <body>
-    <a href="/canvas-td-master/canvas-td-master/td.html" class="button">Play Tower Defense</a>
+    <a href="td.html" class="button">Play Tower Defense</a>
   </body>
 </html>
