--- a/index.html
+++ b/index.html
@@ -126,3 +126,27 @@
     <a href="td.html" class="button">Play Tower Defense</a>
   </body>
 </html>
+   
+   <html>
+<center>
+  <head>
+    <title>Mainpage</title>
+    <style>
+      .button {
+        background-color:#990000;
+        border: none;
+        color: white;
+        padding: 20px 34px;
+        text-align: center;
+        text-decoration: underline;
+        display: inline-block;
+        font-size: 45px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  <body>
+    <a href="2048.html" class="button">Play 2048</a>
+  </body>
+</html>
