--- a/2048.html
+++ b/2048.html
@@ -1,1 +1,22 @@
+<html>
+  <head>
+    <title>Mainpage</title>
+    <style>
+      .button {
+        background-color:#800000;
+        border: none;
+        color: white;
+        padding: 20px 34px;
+        text-align: center;
+        text-decoration: underline;
+        display: inline-block;
+        font-size: 20px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+    <a href="index.html" class="button">Go Home</a>
+</html>
+
 <iframe src="https://hczhcz.github.io/2048/20ez/"></iframe>
