--- a/2048.html
+++ b/2048.html
@@ -19,4 +19,6 @@
     <a href="index.html" class="button">Go Home</a>
 </html>
 
-<iframe src="https://hczhcz.github.io/2048/20ez/"></iframe>
+<iframe src="https://hczhcz.github.io/2048/20ez/" width="700" height="700"></iframe>
+
+
