--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </style>
   </head>
   <body>
-    <a href="snake.html" class="button">Play Snake</a>
+    <a href="snake.html" class="button">Play Speed Snake</a>
   </body>
 </html>
 
