--- a/pong.html
+++ b/pong.html
@@ -1,5 +1,26 @@
 <!DOCTYPE html>
 
+<html>
+  <head>
+    <title>Mainpage</title>
+    <style>
+      .button {
+        background-color:#800000;
+        border: none;
+        color: white;
+        padding: 20px 34px;
+        text-align: center;
+        text-decoration: underline;
+        display: inline-block;
+        font-size: 20px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+    <a href="index.html" class="button">Go Home</a>
+</html>
+
 <html> WASD for player 1, Arrow keys for player2 <html>
 
 <html>
