--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ body {
 <div class="sidenav">
   <a href="index.html">Home</a>
      <hr size="" width="" color="">  
-  <a href="servers.html">Arcade Games</a>
-  <a href="xenonmc.html">Classic Games</a>
+  <a href="arcade.html">Arcade Games</a>
+  <a href="classic.html">Classic Games</a>
  
 </div>
 
