--- a/index.html
+++ b/index.html
@@ -174,3 +174,26 @@
   </body>
 </html>
 
+   <html>
+<center>
+  <head>
+    <title>Mainpage</title>
+    <style>
+      .button {
+        background-color:#990000;
+        border: none;
+        color: white;
+        padding: 20px 34px;
+        text-align: center;
+        text-decoration: underline;
+        display: inline-block;
+        font-size: 45px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  <body>
+    <a href="space.html" class="button">Play Space Invaders</a>
+  </body>
+</html>
