--- a/snake.html
+++ b/snake.html
@@ -1,28 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<html>
-  <head>
-    <title>Mainpage</title>
-    <style>
-      .button {
-        background-color:#800000;
-        border: none;
-        color: white;
-        padding: 20px 34px;
-        text-align: center;
-        text-decoration: underline;
-        display: inline-block;
-        font-size: 20px;
-        margin: 4px 2px;
-        cursor: pointer;
-      }
-    </style>
-  </head>
-    <a href="index.html" class="button">Go Home</a>
-</html>
-
+  <title>Basic Snake HTML Game</title>
   <meta charset="UTF-8">
   <style>
   html, body {
@@ -80,7 +59,7 @@ function loop() {
   requestAnimationFrame(loop);
 
   // slow game loop to 15 fps instead of 60 (60/15 = 4)
-  if (60/15 = 4) {
+  if (++count < 4) {
     return;
   }
 
