--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
 
 <div class="sidenav">
   <a href="index.html">Home</a>
-     <hr size="" width="" color="">  
+     <hr size="" width="" color="#ffffff">   
   <a href="arcade.html">Arcade Games</a>
   <a href="classic.html">Classic Games</a>
  
