--- a/2048.html
+++ b/2048.html
@@ -1,112 +1,24 @@
-<!DOCTYPE html>
-
-<body backround="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.pntdns.com%2Fimages%2Fdedicated_servers.jpg&f=1&nofb=1">
-
 <html>
-<head>
-<title>
-HTML Arcade
-  </title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: "Lato", sans-serif;
-}
-
-.sidenav {
-  height: 100%;
-  width: 160px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
-
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.main {
-  margin-left: 160px; /* Same as the width of the sidenav */
-  font-size: 28px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-</style>
-</head>
-<body>
-
-<div class="sidenav">
-  <a href="index.html">Home</a>
-     <hr size="" width="" color="">  
-  <a href="arcade.html">Arcade Games</a>
-  <a href="classic.html">Classic Games</a>
- 
-</div>
-
-<div class="main">
-  <html>
-<center>
   <head>
     <title>Mainpage</title>
     <style>
       .button {
-        background-color:#990000;
+        background-color:#800000;
         border: none;
         color: white;
         padding: 20px 34px;
         text-align: center;
         text-decoration: underline;
         display: inline-block;
-        font-size: 45px;
+        font-size: 20px;
         margin: 4px 2px;
         cursor: pointer;
       }
     </style>
   </head>
-  <body>
-    <a href="2048.html" class="button">Play 2048</a>
-  </body>
+    <a href="index.html" class="button">Go Home</a>
 </html>
 
-<html>
-<center>
-  <head>
-    <title>Mainpage</title>
-    <style>
-      .button {
-        background-color:#990000;
-        border: none;
-        color: white;
-        padding: 20px 34px;
-        text-align: center;
-        text-decoration: underline;
-        display: inline-block;
-        font-size: 45px;
-        margin: 4px 2px;
-        cursor: pointer;
-      }
-    </style>
-  </head>
-  <body>
-    <a href="td.html" class="button">Play Tower Defense</a>
-  </body>
-</html>
-   
-</body>
-</html> 
+<iframe src="https://hczhcz.github.io/2048/20ez/" width="700" height="700"></iframe>
+
+
