--- a/arcade.html
+++ b/arcade.html
@@ -56,6 +56,7 @@ body {
      <hr size="" width="" color="">  
   <a href="arcade.html">Arcade Games</a>
   <a href="classic.html">Classic Games</a>
+  <a href="https://xernar.com">Games By Xernar.</a>
  
 </div>
 
